--- a/chromeApp/window.html
+++ b/chromeApp/window.html
@@ -5,7 +5,7 @@
   
 </head>
 <body>
-  <h1>Countdown Clock</h1>
+  <h1>Excited?</h1>
 <div id="clockdiv">
   <div>
     <span class="days"></span>
@@ -24,6 +24,7 @@
     <div class="smalltext">Seconds</div>
   </div>
 </div>
+    <h3>More to go..!</h3>
 <script type="text/javascript" src="file.js" ></script>
 <!--<script>
 function getTimeRemaining(endtime) {
